--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@ div{
 <p>
 <b style="color:red">ABOUT THE AUTHOR</b>
 </p>
-<a href="author.html">AUTHOR</a>
+<a href="Author.html">AUTHOR</a>
 </body>
 </html>
