--- a/Author.html
+++ b/Author.html
@@ -36,7 +36,7 @@ div{
 <body class="w3-content">
 <div class="w3-container">
 <h1 style="color:blue"><b>ABOUT THE AUTHOR</b></h1>
-<img src = "file:///C:/html%20ebook/rm.jpg" alt="rose marie" width="200" height="200" style="border:3px solid black">
+<img src = "rm.jpg" alt="rose marie" width="200" height="200" style="border:3px solid black">
 
 <body style = "background-color: lightblue">
 <h2 style = "color:blue"><b><center>ROSE MARIE D. TUPAS</center></b></h1>
